# Segmentation-In-Satellite-Images

./: .gitignore  .pre-commit-config.yaml  README.md  params.yaml  pyproject.toml  requirements.in
config/: dataset-building.toml
robosat/: datasets.py
robosat/tools/: cover.py  download.py  extract.py  intersection.py  predict.py  rasterize.py  split_tiles.py  subset.py  train.py  weights.py
src/: download_tiles.py  logger.py
